Created a first draft of the EPUB file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-# Don't upload any copyrighted material
+# Don't upload any (possibly) copyrighted material
 *.pkl
 *.html
 images
+images_original
+*.epub
 
 # PyCharm
 .idea
